2018-12-05  Jacob Bachmeyer  <jcb62281@gmail.com>

	* runtest.exp (load_config): Remove unused globals.
	(load_generic_config): Likewise.
	(load_board_description): Likewise.
	(load_base_board_description): Likewise.

2018-12-05  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (grep): Handle -n.
	* doc/dejagnu.texi (grep procedure): Document it.
	* testsuite/runtest.all/utils.test: Add a test case.
	* NEWS: Add an item.

2018-12-05  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test: Test diff.

2018-12-04  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test: Test grep.

2018-12-04  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test (which): Fail on the else path,
	don't pass in either case.

2018-12-04  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (Libgloss): Improve documentation.
	(Debugging Procedures): Likewise.

2018-12-04  Ben Elliston  <bje@gnu.org>

	* lib/debugger.exp (dumprocs): Fix proc comment.

2018-12-04  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (Utility Procedures): Improve documentation for
	the procedures in this section.

2018-12-04  Jacob Bachmeyer  <jcb62281@gmail.com>

	* NEWS: Document new relative_filename procedure and --local_init/
	--global_init command line options.

2018-12-04  Jacob Bachmeyer  <jcb62281@gmail.com>

    	* lib/utils.exp (relative_filename): New proc.
	* runtest.exp: Use it.
    	* doc/dejagnu.texi (relative_filename procedure): Document it.
    	* testsuite/runtest.all/utils.test: Add tests for relative_filename.

2018-12-03  Ben Elliston  <bje@gnu.org>

	* dejagnu.h (TestState): Remove const char * variants of pass(),
	xpass(), fail(), xfail(), untested(), unresolved() for C++. A
	const char * will be implicitly converted to std::string.

2018-12-03  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Move 'Built-in Procedures' node up a level,
	removing the 'Reference' node and chapter. Make all subsubsections
	in this chapter unnumbered subheadings.
