@@ -1,3 +1,7 @@
+2018-12-05  Ben Elliston  <bje@gnu.org>
+
+	* testsuite/runtest.all/utils.test: Test runtest_file_p.
+
 2018-12-05  Jacob Bachmeyer  <jcb62281@gmail.com>
 
 	* runtest.exp (load_config): Remove unused globals.
